--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "truck",
+    "scheme": "truck",
     "slug": "truck",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -25,6 +26,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-localization",
+      "expo-router"
+    ]
   }
 }
